BUG#2596 MySQL Client Segmentation Fault on Solaris 9   - Print readline or libedit version